Revert "Attempt to fix context menu on ios, not very optimistic though"
This reverts commit 540379d6f2eb3736a5e0b744d7fdfde31cfb21b5.

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -12,7 +12,3 @@
   opacity: 0;
   transition: visibility 0s 0.5s, opacity 0.5s linear;
 }
-
-* {
-  -webkit-touch-callout: none;
-}
